test/integration/fixtures/esm/syntax-error/esm-syntax-error.fixture.mjs
// This is intentionally a syntax error
it('should never run because of a syntax error here', => {
});
